--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<h1>
-  Hello I am Prachi
-</h1>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+<title>About A Student</title>
+<h1>Prachi Patel</h1>
+    <style>
+        background-color:#FFE5B4;
+      </style>
+        </head>
