--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<title>About A Student</title>
-<h1>Prachi Patel</h1>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/231b648be8.js" crossorigin="anonymous"></script>
+    <title>About a student</title>
+
     <style>
-        background-color:#FFE5B4;
-      </style>
-        </head>
+      {
+    background-image: url("escalante_sm-3.jpg");
+    background-size: cover;
+    font-family:helvatica;
+
+      }
+    </style>
+
+  </head>
+  <body>
+<div id="main">
+<img id="banner" src="banner.jpg" alt="the banner broke">
+
+<i class="fa-brands fa-linkedin"></i>
+
+<nav>
+  <ul id="nav-ul">
+    <i class="fa-brands fa-linkedin"></i>
+    <li class="nav"><a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin"></i></a></li>
+  </ul>
+</nav>
+
+<h2>My name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship. </h2>
+
+<hr>
+
+
+
+
+
+
+</div>
+
+  </body
