--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <title>About a student</title>
 
     <style>
-      {
-    background-image: url("escalante_sm-3.jpg");
+body {
+    background-image: url
     background-size: cover;
     font-family:helvatica;
 
       }
+
     </style>
 
   </head>
   <body>
 <div id="main">
-<img id="banner" src="banner.jpg" alt="the banner broke">
+<img id="banner" src="image.jpg" alt="the banner broke">
 
 <i class="fa-brands fa-linkedin"></i>
 
@@ -28,14 +29,10 @@
     <li class="nav"><a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin"></i></a></li>
   </ul>
 </nav>
-
-<h2>My name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship. </h2>
+<h1>Prachi Patel</h1>
+<h2>My name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.</h2>
 
 <hr>
-
-
-
-
 
 
 </div>
