--- a/index.html
+++ b/index.html
@@ -5,16 +5,68 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/231b648be8.js" crossorigin="anonymous"></script>
     <title>About a student</title>
+<<style media="screen">
+  background-image: url("background image,jpg");
+  background-size: cover;
+  font-family:helvatica;
 
-    <style>
-body {
-    background-image: url
-    background-size: cover;
-    font-family:helvatica;
+    }
+  #main {
+  width: 1200px;
+  height: 1400px;
+  background-color: #fff;
+  margin: 0 auto;
+  border: 1px solid #000;
+  }
+  #banner{
+    width:1200px;
+  }
+  nav{
+    width: 1200px;
+    height: 50px;
+    background-color: #ccc;
+  }
+  #nav_ul{
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+  .nav,a{
+  display: table-cell;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  vertical align: middle;
 
-      }
+  }
+  a{
+    text-decoration: none;
+    color:#fff;
+    font-size:140%
+  }
+  a:hover{
+    background-color:#999;
+    border-radius:10px;
+  }
+  h1{
+    font-size: 5em;
+    width: 800px;
+  margin:50px auto;
+  text-align: center;
+  background-color: #e1e1e1;
+  color:#fff;
+  border-radius: 5px;
+  box-shadow: 5px 5px 20px #888;
+  padding:20px;
+  text-shadow: 3px 3px #800;
+  }
+  p,li{
+    margin:15px;
+    line-height: 1.3;
+    font-size:1.25em;
+  }
+  </style>
 
-    </style>
 
   </head>
   <body>
@@ -30,7 +82,7 @@ body {
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
-<h2>My name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.</h2>
+<h2>My name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC.</h2>
 
 <hr>
 
