--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <ul id="nav-ul">
     <i class="fa-brands fa-linkedin"></i>
     <li class="nav"><a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin"></i></a></li>
-    <<li><a href=“[pagename]”>[Pagename]</a></li>
+    <li><a href=“(aboutme.html)”>(aboutme.html)</a></li>
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
