--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,9 @@
     <title>About me</title>
     <style>
       body {
-        bodyground-colour:#f7f5bc
+        background-color: #f7f5bc;
         background-size: cover;
-        font-family:helvatica;
+        font-family:helvetica;
       }
     </style>
   </head>
@@ -18,17 +18,17 @@
       <ul id="nav-ul">
         <i class="fa-brands fa-linkedin"></i>
         <li class="nav"><a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href=“(index.html)”>(index.html)</a></li>
+        <li><a href=index.html>Home Page</a></li>
       </ul>
     </nav>
     <h1>Prachi Patel</h1>
     <h2>Bhopal, India</h2>
     <h3> Education Courses Taken Accomplishments Skills </h3>
-
-    <hr>
-
-
-    </div>
+    <p><em>Education</em></p>
+    <ol>
+      <li>Babson College, MS in Marketing and Entrepreneurship</li>
+      <li>London School Of economics Marketing</li>
+    </ol>
 
   </body>
 </html>
