--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>About a student</title>
 <style>
   body{
-    background-image: url("background-image.jpg");
+    background-image: url("background-final-image.jpg");
     background-size: cover;
     font-family:helvatica;
 }
