--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@ h1{
   width: 800px;
 margin:50px auto;
 text-align: center;
-background-color: #e1e1e1;
-color:#fff;
+color:#ffffff;
 border-radius: 5px;
 box-shadow: 5px 5px 20px #888;
 padding:20px;
 text-shadow: 3px 3px #800;
 }
 p,li{
-  margin:15px;
+  margin:25px;
   line-height: 1.3;
   font-size:1.25em;
 }
