--- a/index.html
+++ b/index.html
@@ -11,34 +11,6 @@
     background-size: cover;
     font-family:helvatica;
 }
-#main {
-width: 1200px;
-height: 1400px;
-background-color: #fff;
-margin: 0 auto;
-border: 1px solid #000;
-}
-#banner{
-  width:1200px;
-}
-nav{
-  width: 1200px;
-  height: 50px;
-  background-color: #ccc;
-}
-#nav_ul{
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.nav,a{
-display: table-cell;
-width: 200px;
-height: 50px;
-text-align: center;
-vertical align: middle;
-
-}
 a{
   text-decoration: none;
   color:#fff;
@@ -51,16 +23,17 @@ a:hover{
 h1{
   font-size: 5em;
   width: 800px;
-margin:50px auto;
+margin:20px auto;
 text-align: center;
-color:#ffffff;
+background-color: #e1e1e1;
+color:#fff;
 border-radius: 5px;
 box-shadow: 5px 5px 20px #888;
 padding:20px;
 text-shadow: 3px 3px #800;
 }
 p,li{
-  margin:25px;
+  margin:15px;
   line-height: 1.3;
   font-size:1.25em;
 }
