--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     background-size: cover;
     font-family:helvatica;
 }
+h1{
+  font-size: 5em;
+  width: 800px;
+margin:20px auto;
+text-align: center;
+background-color: #e1e1e1;
+color:#fff;
+border-radius: 5px;
+box-shadow: 5px 5px 20px #888;
+padding:20px;
+text-shadow: 3px 3px #800;
+}
 h2{color:#ffffff}
   </style>
 
