--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     background-size: cover;
     font-family:helvatica;
 }
+title{color: #ffffff}
 h1{
   font-size: 5em;
   width: 800px;
 margin:20px auto;
 text-align: center;
 background-color: #e1e1e1;
-color:#fff;
+color:#ffffff;
 border-radius: 5px;
 box-shadow: 5px 5px 20px #888;
 padding:20px;
