--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/231b648be8.js" crossorigin="anonymous"></script>
     <title>About a student</title>
+    <meta  name=“Prachi” content=“I have an ampltitude for entrepreneurship with marketing and market analysis. I am an artist by heart who loves to paint, play music, trek and travel.”>
+    <meta  name=“keywords” content=“Prachi, treking, painting, marketing"> 
 <style>
   body{
     background-image: url("background-final-image.jpg");
@@ -31,7 +33,7 @@ h2{color:#ffffff}
   </head>
   <body>
 <div id="main">
-<img id="banner" src="image.jpg" alt="the banner broke">
+<img id="banner" src="image.jpg" alt="me hiking gulf of cliffs">
 
 <i class="fa-brands fa-linkedin"></i>
 
