--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h2{color:#ffffff}
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
-<h2>My name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC.</h2>
+<h2>Hi, my name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC. I am an artist by heart who loves to paint, trek, travel and play music.</h2>
 
 <hr>
 
