--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ box-shadow: 5px 5px 20px #888;
 padding:20px;
 text-shadow: 3px 3px #800;
 }
-h2{color:#ffffff}
+h2{color:#ffffff
+font-size:2em}
   </style>
 
 
