--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/231b648be8.js" crossorigin="anonymous"></script>
     <title>About me</title>
@@ -26,7 +27,24 @@
     <p><em>Education</em></p>
     <ol>
       <li>Babson College, MS in Marketing and Entrepreneurship</li>
-      <li>London School Of economics Marketing</li>
+      <li>London School Of economics - Marketing (summer)</li>
+      <li> UCL school of management (Semester abroad)</li>
+
+    </ol>
+    <h4> Leadership and Extra curriculars</h4>
+    <p><em>Leadership</em></p>
+    <ol>
+      <li>Co- Founder Samvedana</li>
+      <ul>
+        <li> Non- profit organization that crowd funds to solve major problems like education, food for all, and gender inequality in the world.</li>
+        <li> Collaborated with State Government and executed marketing strategy to seek financial support from local philanthropists, resulting in crowdsourcing of $14960 in a span of 2 months</li>
+        <li>Distributed books and school bags in 100 schools across villages in Gujarat </li>
+          <li> Installed solar-powered digital learning solution in  schools, spread across 3 states, increasing attendance by  11%</li>
+      </ul>
+
+      <li> President of Babson Undergraduate Family Entrepreneurship Club</li>
+      <li> Campus activity board (CAB) - Marketing committee</li>
+
     </ol>
 
   </body>
