--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta  name=“Prachi” content=“I have an ampltitude for entrepreneurship with marketing and market analysis. I am an artist by heart who loves to paint, play music, trek and travel.”>
 <style>
   body{
-    background-image: url("background-final-image.jpg");
+    background-image: url("finalbg.jpg");
     background-size: cover;
     font-family:helvatica;
 }
