--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@ h2{color:#ffffff;
 font-size:2em}
   </style>
 
-
   </head>
   <body>
 <div id="main">
-<img id="banner" src="image.jpg" alt="me hiking gulf of cliffs">
+<p style="text-align:center;"><img
+img id="banner" src="myimage.jpg" alt="me hiking gulf of cliffs" >
+</p>
 
 
 <nav>
