--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ font-size:2em}
   <body>
 <div id="main">
 <p style="text-align:center;"><img
-img id="banner" src="finalmyimage.jpg" alt="me hiking gulf of cliffs" >
+img id="banner" src="cimg.jpg" alt="me hiking gulf of cliffs" >
 </p>
 
 
