--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ h1{
   font-size: 4em;
   width: 500px;
 margin:15px auto;
+margin-bottom:20px;
 text-align: center;
 background-color: #e1e1e1;
 color:#ffffff;
