--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ h1{
   font-size: 4em;
   width: 500px;
 margin:15px auto;
-margin-bottom:20px;
+margin-bottom:200px;
 text-align: center;
 background-color: #e1e1e1;
 color:#ffffff;
@@ -34,7 +34,7 @@ font-size:2em}
   <body>
 <div id="main">
 <p style="text-align:center;"><img
-img id="banner" src="cimg.jpg" alt="me hiking gulf of cliffs" >
+img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
 </p>
 
 
