--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ h1{
   font-size: 4em;
   width: 500px;
 margin:15px auto;
-margin-bottom:200px;
 text-align: center;
 background-color: #e1e1e1;
 color:#ffffff;
@@ -27,14 +26,15 @@ padding:20px;
 text-shadow: 3px 3px #800;
 }
 h2{color:#ffffff;
-font-size:2em}
+font-size:2em;
+text-align: center}
   </style>
 
   </head>
   <body>
 <div id="main">
 <p style="text-align:center;"><img
-img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
+src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
 </p>
 
 
