--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ text-align: center}
   <body>
 <div id="main">
 <p style="text-align:center;"><img
-src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
+margin-top: 200px;
+img id = "banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
 </p>
-
 
 <nav>
   <ul id="nav-ul">
