--- a/index.html
+++ b/index.html
@@ -33,18 +33,16 @@ text-align: center}
   </head>
   <body>
 <div id="main">
-<p style="text-align:center;"><img
-img id = "banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
-</p>
+
 
 <nav>
   <ul id="nav-ul">
-    <i class="fa-brands fa-linkedin"></i>
-    <li class="nav"><a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin"></i></a></li>
-    <li><a href="aboutme.html">About Me</a></li>
+    <a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin" style="font-size:36px;"></i></a>
+    <a href="aboutme.html">About Me</a>
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
+<img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
 <h2>Hi, my name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC. I am an artist by heart who loves to paint, trek, travel and play music.</h2>
 
 <hr>
