--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ text-align: center}
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
-<style="text-align:center;"img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
+<style="text-align:center;"><img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
 <h2>Hi, my name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC. I am an artist by heart who loves to paint, trek, travel and play music.</h2>
 
 <hr>
