--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <title>About me</title>
     <style>
       body {
-        background-color: #f7f5bc;
+        background-image: url("bgimage.2.PNG");
         background-size: cover;
         font-family:helvetica;
       }
@@ -33,7 +33,7 @@
     </ol>
     <h4> Leadership and Extra curriculars</h4>
     <p><em>Leadership</em></p>
-    <ol> 
+    <ol>
       <li>Co- Founder Samvedana</li>
       <ul>
         <li> Non- profit organization that crowd funds to solve major problems like education, food for all, and gender inequality in the world.</li>
