--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     <title>About me</title>
     <style>
       body {
-        background-image: url("bgimage.2.PNG");
+        background-image: url("pppp,jpg.png");
         background-size: cover;
         font-family:helvetica;
       }
