--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/231b648be8.js" crossorigin="anonymous"></script>
     <title>About me</title>
@@ -11,6 +10,7 @@
         background-size: cover;
         font-family:helvetica;
       }
+      title{color: #ffffff}
     </style>
   </head>
   <body>
@@ -41,10 +41,15 @@
         <li>Distributed books and school bags in 100 schools across villages in Gujarat </li>
           <li> Installed solar-powered digital learning solution in  schools, spread across 3 states, increasing attendance by  11%</li>
       </ul>
-
       <li> President of Babson Undergraduate Family Entrepreneurship Club</li>
       <li> Campus activity board (CAB) - Marketing committee</li>
-
+    </ol>
+    <img id="banner" src="samvedanalove.jpg" alt="samvedana me helping with food for all" >
+    <p><em>Skills and Interest</em></p>
+    <ol>
+      <li>Languages: English, Hindi, Gujarati, Sanskrit</li>
+      <li>Skills: Database design, TableauTeam worker, good managerial skills, great leadership skills, focused, critical thinker, good communication skills, professionalism, adaptability, creative, Canva, Digital marketing, project management, Microsoft office social media marketing, campaign management, email marketing, consumer behavior drivers</li>
+      <li>Interests: Painting, Traveling to new places, Playing Ukelele, Gardening,marketing, Basketball, Badminton, social media marketing, video making, vlogging, cooking, volunteering, learning new languages and cultures</li>
     </ol>
 
   </body>
