--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@ text-align: center}
 <h2>Hi, my name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC. I am an artist by heart who loves to paint, trek, travel and play music.</h2>
 
 <hr>
-
-
 </div>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GYQ3C8K4X3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GYQ3C8K4X3');
+</script>
 
   </body
