--- a/aboutme.html
+++ b/aboutme.html
@@ -16,9 +16,8 @@
   <body>
     <nav>
       <ul id="nav-ul">
-        <i class="fa-brands fa-linkedin"></i>
-        <li class="nav"><a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin"></i></a></li>
-        <li><a href=index.html>Home Page</a></li>
+        <a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin" style="font-size:36px;"></i></a>
+          <a href="index.html"><i class="fa-solid fa-house-chimney" style="font-size:36px;"></i></a>
       </ul>
     </nav>
     <h1>Prachi Patel</h1>
