--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
   <meta name="google-site-verification" content="ManMQjcSkEviMYlgXC5ANK2_PIlRP4pg9T5RtbYyO6A" />
+  <script src="https://kit.fontawesome.com/5705849d3d.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/231b648be8.js" crossorigin="anonymous"></script>
     <title>About a student</title>
@@ -39,7 +40,8 @@ text-align: center}
 <nav>
   <ul id="nav-ul">
     <a href="https://www.linkedin.com/in/prachi-patel-4ba3241b0"><i class="fa-brands fa-linkedin" style="font-size:36px;"></i></a>
-    <a href="aboutme.html">About Me</a>
+  <a href="aboutme.html"><i class="fa-solid fa-child-dress" style="font-size:36px;"></i></a>
+
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
