--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
     <p><em>Skills and Interest</em></p>
     <ol>
       <li>Languages: English, Hindi, Gujarati, Sanskrit</li>
-      <li>Skills: Database design, TableauTeam worker, good managerial skills, great leadership skills, focused, critical thinker, good communication skills, professionalism, adaptability, creative, Canva, Digital marketing, project management, Microsoft office social media marketing, campaign management, email marketing, consumer behavior drivers</li>
+      <li>Skills: Database design, Tableau, Team worker, good managerial skills, great leadership skills, focused, critical thinker, good communication skills, professionalism, adaptability, creative, Canva, Digital marketing, project management, Microsoft office social media marketing, campaign management, email marketing, consumer behavior drivers</li>
       <li>Interests: Painting, Traveling to new places, Playing Ukelele, Gardening,marketing, Basketball, Badminton, social media marketing, video making, vlogging, cooking, volunteering, learning new languages and cultures</li>
     </ol>
 
