--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   body{
     background-image: url("finalbg.jpg");
     background-size: cover;
-    font-family:helvatica;
+    font-family:'helvatica';
 }
 title{color: #ffffff}
 h1{
@@ -26,7 +26,10 @@ box-shadow: 5px 5px 20px #888;
 padding:20px;
 text-shadow: 3px 3px #800;
 }
-img{style="text-align:center;"}
+.center{
+  display:block;
+  margin: auto
+}
 h2{color:#ffffff;
 font-size:2em;
 text-align: center}
@@ -45,7 +48,7 @@ text-align: center}
   </ul>
 </nav>
 <h1>Prachi Patel</h1>
-<img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" >
+<img id="banner" src="finalbgfinal.jpg" alt="me hiking gulf of cliffs" class ="center">
 <h2>Hi, my name is Prachi Patel. I am a sophomore at Babson college concentrating in Marketing and Entrepreneurship.Currently on campus I am involved in Campus Activity Board and BUFEC. I am an artist by heart who loves to paint, trek, travel and play music.</h2>
 
 <hr>
