--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   body{
     background-image: url("finalbg.jpg");
     background-size: cover;
-    font-family:'helvatica';
+    font-family:'PT Sans';
 }
 title{color: #ffffff}
 h1{
