--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
       body {
         background-image: url("pppp,jpg.png");
         background-size: cover;
-        font-family:helvetica;
+        font-family:'PT Sans';
       }
       title{color: #ffffff}
     </style>
